--- a/movies-launch/index.html
+++ b/movies-launch/index.html
@@ -67,7 +67,7 @@
                     <div class="play-btn-inner">
                         <i class="fa fa-play"></i>
                     </div>
-                    <small><a href="ninnukori.html"><b>Watch Movie</b></a></small>
+                    <small><a href="ninnu-kori.html"><b>Watch Movie</b></a></small>
                     </div>
             </div>
             </div>
