--- a/movies-launch/movie1.html
+++ b/movies-launch/movie1.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Movie Page</title>
-    <link rel="stylesheet" type="text/css" href="main.css">
+    <link rel="stylesheet" type="text/css" href="styles/movie1.css">
     <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
