--- a/gradeChecker/grade.html
+++ b/gradeChecker/grade.html
@@ -11,28 +11,30 @@
         </div>
         <div class="grade-form">
             <div class="grade-form-group">
-                <input type="text" class="grade-form-control" placeholder="LINUX PROGRAMMING" id="lp">
+                <input type="text" class="grade-form-control" placeholder="LINUX PROGRAMMING" id="lp" required>
             </div>
             <div class="grade-form-group">
-                <input type="text" class="grade-form-control" placeholder="OPERATING SYSTEM" id="os">
+                <input type="text" class="grade-form-control" placeholder="OPERATING SYSTEM" id="os" required>
             </div>
             <div class="grade-form-group">
-                <input type="text" class="grade-form-control" placeholder="THEORY OF COMPUTATION" id="toc">
+                <input type="text" class="grade-form-control" placeholder="THEORY OF COMPUTATION" id="toc" required>
             </div>
             <div class="grade-form-group">
-                <input type="text" class="grade-form-control" placeholder="ALGARITHMS" id="alg">
+                <input type="text" class="grade-form-control" placeholder="ALGARITHMS" id="alg" required>
             </div>
             <div class="grade-form-group">
-                <input type="text" class="grade-form-control" placeholder="HVPE" id="hvpe">
+                <input type="text" class="grade-form-control" placeholder="HVPE" id="hvpe" required>
             </div>
             <div>
-                <input type="button" name="" class="grade-form-button" value="showPercentage" onclick="calcy()">
+                <button class="grade-form-button" onclick="calcy()">Show Percentage</button>
             </div>
         </div>
         <div class="grade-form-showdata">
             <p id="showData"></p>
         </div>
     </div>
-    <script src="grade.js"></script>
+    <script src="grade.js">
+        
+    </script>
 </body>
 </html>
