--- a/jntua-ciricullum/index.html
+++ b/jntua-ciricullum/index.html
@@ -15,7 +15,7 @@
             <li><a href="#">About Us</a></li>
             <li><a href="#">Contact Us</a></li>
             <li><a href="#">Services</a></li>
-            <li><a href="curiculum.html">Login</a></li>
+            <li><a href="login.html">Login</a></li>
             <li><a href="register.html">Register</a></li>
         </ul>
     </div>
