--- a/jntua-ciricullum/index.html
+++ b/jntua-ciricullum/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Jntuacea Ciriculum</title>
-    <link rel="stylesheet" type="text/css" href="index.css">
+    <link rel="stylesheet" type="text/css" href="styles/index.css">
     <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
