--- a/jntua-ciricullum/register.html
+++ b/jntua-ciricullum/register.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Curiculum Jntuacea(register)</title>
-    <link rel="stylesheet" type="text/css" href="register.css">
+    <link rel="stylesheet" type="text/css" href="styles/register.css">
     <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
