--- a/loading/index.html
+++ b/loading/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Loading...</title>
-    <link rel="stylesheet" type="text/css" href="loading.css">
+    <link rel="stylesheet" type="text/css" href="index.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
