--- a/whatsapp-desktop/index.html
+++ b/whatsapp-desktop/index.html
@@ -17,7 +17,7 @@
         <div class="mem-box">
             <div class="owner-details">
                 <div class="profile-owner">
-                    <img src="images/nanda.jpg" alt="">
+                    <img src="images/nani1.jpeg" alt="">
                 </div>
                 <div class="menu">
                     <span><a href=""><i class="fa fa-circle-o-notch"></i></a></span>
@@ -34,7 +34,7 @@
             <div class="members">
                 <div class="member">
                     <div class="profile-users">
-                        <img src="images/nanda.jpg" alt="">
+                        <img src="images/nani1.jpeg" alt="">
                     </div>
                     <div class="name-msg">
                         <h3>Nanda Kishore</h3>
@@ -48,10 +48,10 @@
 
                 <div class="member">
                     <div class="profile-users">
-                        <img src="images/IMG-20191125-WA0021.jpg" alt="">
+                        <img src="images/nani2.jpg" alt="">
                     </div>
                     <div class="name-msg">
-                        <h3>Farheen😍</h3>
+                        <h3>Bharath</h3>
                         <p>Hello nanda ...</p>
                     </div>
                     <div class="time">
@@ -62,10 +62,10 @@
 
                 <div class="member">
                     <div class="profile-users">
-                        <img src="images/0MS_0032.JPG" alt="">
+                        <img src="images/nani3.jpg" alt="">
                     </div>
                     <div class="name-msg">
-                        <h3>Chandrika😍😍</h3>
+                        <h3>Chandrika</h3>
                         <p>How are you...</p>
                     </div>
                     <div class="time">
@@ -79,7 +79,7 @@
                         <img src="images/FB_IMG_15262257995645272.jpg" alt="">
                     </div>
                     <div class="name-msg">
-                        <h3>Bharath💖</h3>
+                        <h3>Bharath</h3>
                         <p>Hi</p>
                     </div>
                     <div class="time">
@@ -118,7 +118,7 @@
 
                 <div class="member">
                     <div class="profile-users">
-                        <img src="images/nanda.jpg" alt="">
+                        <img src="images/nani1.jpeg" alt="">
                     </div>
                     <div class="name-msg">
                         <h3>Nanda Kishore</h3>
@@ -132,10 +132,10 @@
 
                 <div class="member">
                     <div class="profile-users">
-                        <img src="images/IMG-20191125-WA0021.jpg" alt="">
+                        <img src="images/nani2.jpg" alt="">
                     </div>
                     <div class="name-msg">
-                        <h3>Farheen😍</h3>
+                        <h3>Bharath</h3>
                         <p>Hello nanda ...</p>
                     </div>
                     <div class="time">
@@ -146,10 +146,10 @@
 
                 <div class="member">
                     <div class="profile-users">
-                        <img src="images/0MS_0032.JPG" alt="">
+                        <img src="images/nani3.jpg" alt="">
                     </div>
                     <div class="name-msg">
-                        <h3>Chandrika😍😍</h3>
+                        <h3>Chandrika</h3>
                         <p>How are you...</p>
                     </div>
                     <div class="time">
@@ -163,7 +163,7 @@
                         <img src="images/FB_IMG_15262257995645272.jpg" alt="">
                     </div>
                     <div class="name-msg">
-                        <h3>Bharath💖</h3>
+                        <h3>Bharath</h3>
                         <p>Hi</p>
                     </div>
                     <div class="time">
@@ -200,9 +200,9 @@
                     </div>
                 </div>
 
-                <div class="member">
+               <div class="member">
                     <div class="profile-users">
-                        <img src="images/nanda.jpg" alt="">
+                        <img src="images/nani1.jpeg" alt="">
                     </div>
                     <div class="name-msg">
                         <h3>Nanda Kishore</h3>
@@ -216,10 +216,10 @@
 
                 <div class="member">
                     <div class="profile-users">
-                        <img src="images/IMG-20191125-WA0021.jpg" alt="">
+                        <img src="images/nani2.jpg" alt="">
                     </div>
                     <div class="name-msg">
-                        <h3>Farheen😍</h3>
+                        <h3>Bharath</h3>
                         <p>Hello nanda ...</p>
                     </div>
                     <div class="time">
@@ -230,10 +230,10 @@
 
                 <div class="member">
                     <div class="profile-users">
-                        <img src="images/0MS_0032.JPG" alt="">
+                        <img src="images/nani3.jpg" alt="">
                     </div>
                     <div class="name-msg">
-                        <h3>Chandrika😍😍</h3>
+                        <h3>Chandrika</h3>
                         <p>How are you...</p>
                     </div>
                     <div class="time">
@@ -247,7 +247,7 @@
                         <img src="images/FB_IMG_15262257995645272.jpg" alt="">
                     </div>
                     <div class="name-msg">
-                        <h3>Bharath💖</h3>
+                        <h3>Bharath</h3>
                         <p>Hi</p>
                     </div>
                     <div class="time">
@@ -288,7 +288,7 @@
         <div class="chat-box">
             <div class="header">
                 <div class="profile-users-name">
-                    <div class="header-image"><img src="images/nanda.jpg" alt=""></div>
+                    <div class="header-image"><img src="images/nani1.jpeg" alt=""></div>
                     <div class="name-lastseen">
                         <h3>Nandakishore</h3>
                         <p>Last seen today at 3.41 PM</p>
