--- a/movies-launch/index.html
+++ b/movies-launch/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Movie launching(Devil-rocks)</title>
+    <meta  name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="styles/main.css">
     <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
