--- a/ecommerce/index.html
+++ b/ecommerce/index.html
@@ -142,13 +142,13 @@
             </div>
             
             <div class="foot-item2">
-                <div class="help-center">
+                <div class="help-center py">
                     <i class="fa fa-question-circle"></i>Help Center
                 </div>
-                <div class="copyright">
+                <div class="copyright py">
                     <i class="fa fa-copyright"></i>All rights Reserved
                 </div>
-                <div class="atm-cards">
+                <div class="atm-cards py">
                     <span><i class="fa fa-cc-visa"></i></span>
                     <span><i class="fa fa-credit-card-alt"></i></span>
                     <!--Add extra cards in future-->
