--- a/jntua-ciricullum/index.html
+++ b/jntua-ciricullum/index.html
@@ -9,7 +9,7 @@
 <div class="container">
     <div class="nav-bar">
         <ul>
-            <li><a href="Index.html" class="important">Home</a></li>
+            <li><a href="index.html" class="important">Home</a></li>
             <li><a href="#">New Books</a></li>
             <li><a href="#">Help</a></li>
             <li><a href="#">About Us</a></li>
