--- a/jntua-ciricullum/login.html
+++ b/jntua-ciricullum/login.html
@@ -9,13 +9,13 @@
 <div class="container">
     <div class="nav-bar">
         <ul>
-            <li><a href="Index.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="#">New Books</a></li>
             <li><a href="#">Help</a></li>
             <li><a href="#">About Us</a></li>
             <li><a href="#">Contact Us</a></li>
             <li><a href="#">Services</a></li>
-            <li><a href="curiculum.html" class="important">Login</a></li>
+            <li><a href="login.html" class="important">Login</a></li>
             <li><a href="register.html">Register</a></li>
         </ul>
     </div> 
