--- a/jntua-ciricullum/register.html
+++ b/jntua-ciricullum/register.html
@@ -9,14 +9,14 @@
 <div class="container">
     <div class="nav-bar">
         <ul>
-            <li><a href="Index.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="#">New Books</a></li>
             <li><a href="#">Help</a></li>
             <li><a href="#">About Us</a></li>
             <li><a href="#">Contact Us</a></li>
             <li><a href="#">Services</a></li>
-            <li><a href="curiculum.html">Login</a></li>
-            <li><a href="#" class="important">Register</a></li>
+            <li><a href="login.html">Login</a></li>
+            <li><a href="register.html" class="important">Register</a></li>
         </ul>
     </div> 
     <div class="login-page">
