--- a/ecommerce/index.html
+++ b/ecommerce/index.html
@@ -16,12 +16,12 @@
     <div class="container">
         <navbar class="nav-bar">
             <ul>
-                <li class="nav-items"><a href="#">Home</a></li>
+                <li class="nav-items"><a href="index.html">Home</a></li>
                 <li class="nav-items"><a href="#"><i class="fa fa-cart-plus"></i>Cart</a></li>
                 <li class="nav-items"><a href="#">Dashboard</a></li>
-                <li class="nav-items"><a href="">A.Dahsboard</a></li>
-                <li class="nav-items"><a href="">Signup</a></li>
-                <li class="nav-items"><a href="">Signin</a></li>
+                <li class="nav-items"><a href="admin.html">A.Dahsboard</a></li>
+                <li class="nav-items"><a href="signup.html">Signup</a></li>
+                <li class="nav-items"><a href="signin.html">Signin</a></li>
                 <li class="nav-items"><a href="">Signout</a></li>
             </ul>
         </navbar>
