--- a/ecommerce/signin.html
+++ b/ecommerce/signin.html
@@ -14,16 +14,18 @@
 
 <body>
     <div class="container">
-        <navbar class="nav-bar">
+       <navbar class="nav-bar" style="background: white">
+           <div class="nav-center">
             <ul>
                 <li class="nav-items"><a href="index.html">Home</a></li>
-                <li class="nav-items"><a href="#"><i class="fa fa-cart-plus"></i>Cart</a></li>
+                <li class="nav-items"><a href="cart.html"><i class="fa fa-cart-plus"></i>Cart</a></li>
                 <li class="nav-items"><a href="#">Dashboard</a></li>
                 <li class="nav-items"><a href="admin.html">A.Dahsboard</a></li>
                 <li class="nav-items"><a href="signup.html">Signup</a></li>
                 <li class="nav-items"><a href="signin.html">Signin</a></li>
                 <li class="nav-items"><a href="">Signout</a></li>
             </ul>
+            </div>
         </navbar>
 
         
